--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Get from: https://www.notion.so/my-integrations
 NOTION_TOKEN=secret_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
+# Notion Database ID for generations (required for generation features)
+# This is the database where AI-generated notes will be exported
+NOTION_DATABASE_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+
 # Database IDs (one per module - set after creating databases)
 # NOTION_DB_LAND_LAW=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 
